payment and manage order

--- a/src/pages/user/Dashboard.css
+++ b/src/pages/user/Dashboard.css
@@ -1,4 +1,4 @@
-.user-menu {
+/* .user-menu {
     background: rebeccapurple;
     height: 150px;
     border-radius: 3px;
@@ -6,4 +6,4 @@
 
 .card {
     background-color: rebeccapurple !important;
-}
+} */
