--- a/src/pages/cart/Cart.css
+++ b/src/pages/cart/Cart.css
@@ -5,6 +5,10 @@
             border-radius: 5px !important;
         }
         
+        .container a {
+            text-decoration: none;
+        }
+        
         @media screen and (min-width: 1200px) {
             .col-lg-8 div {
                 max-height: 100%;
