--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -1,8 +1,68 @@
-.contact-us {
-    margin: 0;
-    padding: 0;
-    height: 70vh;
+.contact-container {
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
+    padding: 50px;
+}
+
+.contact-image .image {
+    width: 100%;
+    max-width: 500px;
+    height: auto;
+    border-radius: 5px;
+}
+
+.contact-details {
+    flex: 1;
+    margin-left: 50px;
+}
+
+.contact-heading {
+    font-size: 32px;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+.contact-text {
+    font-size: 18px;
+    color: #555;
+    margin-bottom: 30px;
+}
+
+.contact-info {
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.contact-icon {
+    font-size: 24px;
+    color: #4c95ed;
+    margin-right: 10px;
+}
+
+.contact-info-text {
+    font-size: 16px;
+    color: #333;
+}
+
+
+/* Additional Styling */
+
+@media (max-width: 768px) {
+    .contact-container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .contact-details {
+        margin-left: 0;
+        margin-top: 30px;
+    }
 }
