--- a/src/pages/categories/Categories.css
+++ b/src/pages/categories/Categories.css
@@ -1,7 +1,10 @@
-.category-card {
-    border: 1px solid #ccc;
+.category-card-1 {
+    border: 1px solid black;
+    background-color: rgb(250, 224, 224);
+    background: linear-gradient(135deg, #6f84eb, #dfc0ae);
     border-radius: 5px;
     padding: 10px;
+    margin-top: 20px;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -40,5 +43,5 @@
 }
 
 .btn-primary:hover {
-    background-color: #3672c1;
+    background-color: #dc6442;
 }
